<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:id="@+id/regemail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="22dp"
            android:layout_weight="2"
             android:hint="@string/emailinput"
            android:inputType="textEmailAddress" >
           
            <requestFocus android:layout_width="wrap_content" />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:id="@+id/regusername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:hint="@string/usernameinput"
            android:layout_weight="2" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/password"
            android:textSize="20sp" >
        </TextView>

        <EditText
            android:id="@+id/regpassword"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:hint="@string/passinput"
            android:layout_weight="2"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/regbtnreg"
        android:background="@drawable/regbutton_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/register" />
        <TextView
        android:id="@+id/reginforegtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/myred"
        android:layout_below="@+id/regbtnreg"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="">
    </TextView> 
</RelativeLayout>